log/build_2025-09-28_19-01-11/planning/stdout_stderr.log
[  5%] Built target config_reader
[ 14%] Built target mathlibs
[ 22%] Built target pnc_map_creator
[ 31%] Built target reference_line
[ 37%] Built target global_planner
Consolidate compiler generated dependencies of target pnc_map_server
[ 45%] Built target vehicle_info
[ 48%] Building CXX object src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/pnc_map_server.cpp.o
[ 54%] Built target global_path_server
[ 60%] Built target decision_center
[ 65%] Built target car_move_cmd
[ 71%] Built target obs_move_cmd
[ 88%] Built target local_planner
[ 91%] Building CXX object src/planning_process/CMakeFiles/planning_process.dir/planning_process.cpp.o
/home/x/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp: In member function ‘void Planning::PNCMapServer::response_pnc_map_callback(std::shared_ptr<base_msgs::srv::PNCMapService_Request_<std::allocator<void> > >, std::shared_ptr<base_msgs::srv::PNCMapService_Response_<std::allocator<void> > >)’:
/home/x/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:47:35: error: ‘MapType’ has not been declared
   47 |             case static_cast<int>(MapType::STRAIGHT): // 直线路径
      |                                   ^~~~~~~
/home/x/planning_with_ROS2_course/src/planning/src/pnc_map_creator/pnc_map_server.cpp:50:35: error: ‘MapType’ has not been declared
   50 |             case static_cast<int>(MapType::STERN): // 转角路径
      |                                   ^~~~~~~
gmake[2]: *** [src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/build.make:76：src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/pnc_map_server.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:411：src/pnc_map_creator/CMakeFiles/pnc_map_server.dir/all] 错误 2
gmake[1]: *** 正在等待未完成的任务....
[ 94%] Linking CXX executable planning_process
[ 97%] Built target planning_process
gmake: *** [Makefile:146：all] 错误 2
